Add swagger doc for getting order list
